# Las_to_OBJ

./: .gitignore  README.md  main.py  pyproject.toml
docs/adr/: 0001-adopt-python-batch-pipeline.md  0002-use-plane-first-rectangle-patches.md  README.md
docs/plans/: 2026-03-24-indoor-obj-pipeline-design.md
examples/: pipeline.sample.json
src/las_to_obj/: cli.py  config.py  geometry.py  io.py  models.py  pipeline.py  planes.py  postprocess.py  preprocess.py  roi_picker.py
src/las_to_obj.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_config.py  test_geometry.py  test_postprocess.py
