[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "las-to-obj"
version = "0.1.0"
description = "Indoor LAS point cloud to lightweight OBJ structural mesh pipeline."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24,<2",
  "laspy>=2.5",
  "open3d>=0.18",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
